--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
         <h1>Магазин автозапчастей</h1>
 
 
-        <h2> внесенные изменения чтобы откатится </h2>
+        <h2> Bekbol </h2>
 
-        <h2> внесенные изменения чтобы откатится </h2>
-
-        <h2> внесенные изменения чтобы откатится </h2>
     </header>
